Style changes globally

--- a/src/sections/media-content-grid.liquid
+++ b/src/sections/media-content-grid.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Media Content Grid Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% render 'section-media-grid' %}
 
 {% schema %}
@@ -8,7 +16,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -18,7 +26,7 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "w-100", "label": "100% wide at all breakpoints"}
         ],
@@ -29,7 +37,7 @@
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },      
+      },
       {
         "type": "checkbox",
         "id": "gutters",
@@ -45,7 +53,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -56,7 +64,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -67,7 +75,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -78,7 +86,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -89,7 +97,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -100,7 +108,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -111,7 +119,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -122,27 +130,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -151,11 +146,11 @@
         "type": "image_picker",
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
-      },  
-      { 
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -164,7 +159,7 @@
         "step": 1,
         "unit": "col",
         "label": "Container Columns - Small Devices",
-        "default": 12 
+        "default": 12
       },
       {
         "type": "range",
@@ -211,7 +206,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -223,7 +218,7 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },           
+      },
       {
         "type": "header",
         "content": "Content"
@@ -232,7 +227,7 @@
         "type": "image_picker",
         "id": "image",
         "label": "Image - Small devices"
-      },     
+      },
       {
         "type": "image_picker",
         "id": "image_lg",
@@ -249,8 +244,8 @@
           { "value": "16by9", "label": "16x9"}
         ],
         "default": "1by1"
-      },                        
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -270,7 +265,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -293,8 +288,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -319,12 +314,12 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "header",
         "content": "Footer Content"
-      },      
+      },
       {
         "type": "text",
         "id": "link_text",
@@ -361,15 +356,15 @@
         "default": "btn-outline-dark"
       }
     ],
-    "blocks": [ 
+    "blocks": [
       {
         "type": "image",
         "name": "Image",
         "settings": [
-          { 
+          {
             "type": "header",
             "content": "Block Content"
-          },   
+          },
           {
             "type": "image_picker",
             "id": "image",
@@ -380,10 +375,10 @@
             "id": "url",
             "label": "URL"
           },
-          { 
+          {
             "type": "header",
             "content": "Block Layout"
-          },   
+          },
           {
             "type": "range",
             "id": "block_container_col",
@@ -392,60 +387,7 @@
             "step": 1,
             "unit": "col",
             "label": "Container Columns - Small Devices",
-            "default": 12 
-          },
-          {
-            "type": "range",
-            "id": "block_container_col_lg",
-            "min": 1,
-            "max": 12,
-            "step": 1,
-            "unit": "col",
-            "label": "Container Columns - Medium & Up Devices",
-            "default": 6
-          }      
-        ]
-      },
-      {
-        "type": "video-block",
-        "name": "Video Block",
-        "settings": [
-          { 
-            "type": "header",
-            "content": "Block Content"
-          },   
-          {
-            "id": "video_url",
-            "type": "video_url",
-            "label": "Video URL",
-            "accept": ["youtube", "vimeo"],
-            "default": "https://www.youtube.com/watch?v=nmLHu3B37Ug"
-          },
-          { 
-            "type": "header",
-            "content": "Block Layout"
-          },             
-          {
-            "type": "select",
-            "id": "video_aspect_ratio",
-            "label": "Video aspect ratio",
-            "options": [
-              { "value": "21by9", "label": "21x9"},
-              { "value": "1by1", "label": "1x1"},
-              { "value": "4by3", "label": "4x3"},
-              { "value": "16by9", "label": "16x9"}
-            ],
-            "default": "16by9"
-          },   
-          {
-            "type": "range",
-            "id": "block_container_col",
-            "min": 1,
-            "max": 12,
-            "step": 1,
-            "unit": "col",
-            "label": "Container Columns - Small Devices",
-            "default": 12 
+            "default": 12
           },
           {
             "type": "range",
@@ -458,33 +400,47 @@
             "default": 6
           }
         ]
-      },      
+      },
       {
-        "type": "product-block",
-        "name": "Product Block",
+        "type": "video-block",
+        "name": "Video Block",
         "settings": [
-          { 
+          {
             "type": "header",
             "content": "Block Content"
-          }, 
+          },
           {
-            "type": "product",
-            "id": "product",
-            "label": "Product"
-          }, 
-          { 
+            "id": "video_url",
+            "type": "video_url",
+            "label": "Video URL",
+            "accept": ["youtube", "vimeo"],
+            "default": "https://www.youtube.com/watch?v=nmLHu3B37Ug"
+          },
+          {
             "type": "header",
             "content": "Block Layout"
-          },             
+          },
+          {
+            "type": "select",
+            "id": "video_aspect_ratio",
+            "label": "Video aspect ratio",
+            "options": [
+              { "value": "21by9", "label": "21x9"},
+              { "value": "1by1", "label": "1x1"},
+              { "value": "4by3", "label": "4x3"},
+              { "value": "16by9", "label": "16x9"}
+            ],
+            "default": "16by9"
+          },
           {
             "type": "range",
             "id": "block_container_col",
-            "min": 1, 
+            "min": 1,
             "max": 12,
             "step": 1,
             "unit": "col",
             "label": "Container Columns - Small Devices",
-            "default": 12 
+            "default": 12
           },
           {
             "type": "range",
@@ -495,34 +451,60 @@
             "unit": "col",
             "label": "Container Columns - Medium & Up Devices",
             "default": 6
-          }         
+          }
         ]
-      },      
+      },
+      {
+        "type": "product-block",
+        "name": "Product Block",
+        "settings": [
+          {
+            "type": "header",
+            "content": "Block Content"
+          },
+          {
+            "type": "product",
+            "id": "product",
+            "label": "Product"
+          },
+          {
+            "type": "header",
+            "content": "Block Layout"
+          },
+          {
+            "type": "range",
+            "id": "block_container_col",
+            "min": 1,
+            "max": 12,
+            "step": 1,
+            "unit": "col",
+            "label": "Container Columns - Small Devices",
+            "default": 12
+          },
+          {
+            "type": "range",
+            "id": "block_container_col_lg",
+            "min": 1,
+            "max": 12,
+            "step": 1,
+            "unit": "col",
+            "label": "Container Columns - Medium & Up Devices",
+            "default": 6
+          }
+        ]
+      },
       {
         "type": "promo-block",
         "name": "Promo Block",
         "settings": [
-          { 
+          {
             "type": "header",
             "content": "Block Content"
-          }, 
-          { 
-            "type": "select",
-            "id": "background_color",
-            "label": "Background color",
-            "options": [
-              { "value": "bg-primary", "label": "Primary" },
-              { "value": "bg-secondary", "label": "Secondary" },
-              { "value": "bg-success", "label": "Success" },
-              { "value": "bg-info", "label": "Info" },          
-              { "value": "bg-warning", "label": "Warning" },          
-              { "value": "bg-danger", "label": "Danger" },
-              { "value": "bg-light", "label": "Light" },
-              { "value": "bg-dark", "label": "Dark" },
-              { "value": "bg-white", "label": "White" }
-            ], 
-            "default": "bg-white",
-            "info": "Default: White"           
+          },
+          {
+            "type": "color",
+            "id": "bg_color",
+            "label": "Background Color"
           },
           {
             "type": "text",
@@ -533,16 +515,16 @@
             "type": "url",
             "id": "url",
             "label": "URL"
-          },   
+          },
           {
             "type": "range",
             "id": "block_container_col",
-            "min": 1, 
+            "min": 1,
             "max": 12,
             "step": 1,
             "unit": "col",
             "label": "Container Columns - Small Devices",
-            "default": 12 
+            "default": 12
           },
           {
             "type": "range",
@@ -553,10 +535,10 @@
             "unit": "col",
             "label": "Container Columns - Medium & Up Devices",
             "default": 6
-          }         
+          }
         ]
       }
-    ],    
+    ],
     "presets": [
       {
         "name": "Media Grid",
@@ -564,4 +546,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
