--- a/src/snippets/heading-element.liquid
+++ b/src/snippets/heading-element.liquid
@@ -1,4 +1,4 @@
-{% comment %} 
+{% comment %}
 
   -----------------------------------------------------------------------------
   Heading Element
@@ -7,11 +7,10 @@
   Usage:
 
   {% render 'heading-element',
-              text: { string }
-              display_size: { string } expects display-1,2,3,4
-              text_align: { string } 'text-center', 'text-left'
-              text_color: { string } 'text-primary', 'text-secondary'
-  %}
+    text: { string }
+    display_size: { string } expects display-1,2,3,4
+    text_align: { string } 'text-center', 'text-left'
+    text_color: { string } 'text-primary', 'text-secondary' %}
 
 {% endcomment %}
 
