--- a/src/snippets/link-element.liquid
+++ b/src/snippets/link-element.liquid
@@ -1,4 +1,4 @@
-{% comment %} 
+{% comment %}
 
   -----------------------------------------------------------------------------
   Link Element
@@ -7,11 +7,10 @@
   Usage:
 
   {% render 'link-element',
-              text_align: { string } - optional
-              link_style: { string } - optional
-              link_url: { string } - optional
-              link_text: { string } - optional
-  %}
+    text_align: { string } - optional
+    link_style: { string } - optional
+    link_url: { string } - optional
+    link_text: { string } - optional %}
 
 {% endcomment %}
 
@@ -30,24 +29,33 @@
 
 {% if link_style != blank %}
   {% if link_style == 'link-underline' %}
-    {% assign link_classes = link_classes | append: ' ' | append: link_style %}
+    {% assign link_classes = link_classes
+      | append: ' '
+      | append: link_style %}
   {% else %}
-    {% assign link_classes = link_classes | append: 'btn ' | append: link_style %}
+    {% assign link_classes = link_classes
+      | append: 'btn '
+      | append: link_style %}
   {% endif %}
 {% else %}
-  {% assign link_classes = link_classes | append: ' ' | append: 'btn-primary' %}
+  {% assign link_classes = link_classes
+    | append: ' '
+    | append: 'btn-primary' %}
 {% endif %}
 {% if link_class != blank %}
-  {% assign link_classes = link_classes | append: ' ' | append: link_class %}
+  {% assign link_classes = link_classes
+    | append: ' '
+    | append: link_class %}
 {% endif %}
 
 {% comment %} Link Element {% endcomment %}
 {% capture link_element %}
   {% if link_url != blank and link_text != blank %}
-    <a href="{{ link_url }}" class="{{ link_classes }} mb-2">{{ link_text }}</a> 
+    <a href="{{ link_url }}"
+      class="{{ link_classes }} mb-2">{{ link_text }}</a>
   {% endif %}
 {% endcapture %}
-  
+
 {% comment %} Render Link Element {% endcomment %}
 {% if link_element != blank %}
   <div class="{{ el_wrapper_classes }}">
