--- a/src/snippets/product-description.liquid
+++ b/src/snippets/product-description.liquid
@@ -1,1 +1,9 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Description
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {{ product.description }}
