--- a/src/snippets/product-form.liquid
+++ b/src/snippets/product-form.liquid
@@ -1,7 +1,23 @@
-<div class="mb-5 mb-md-3" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Form
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
+<div
+  class="mb-5 mb-md-3"
+  itemprop="offers"
+  itemscope
+  itemtype="http://schema.org/Offer">
   <meta itemprop="priceCurrency" content="{{ shop.currency }}">
-  <meta itemprop="price" content="{{ current_variant.price | divided_by: 100.00 }}">
-  <link itemprop="availability" href="http://schema.org/{% if current_variant.available %}InStock{% else %}OutOfStock{% endif %}">
+  <meta
+    itemprop="price"
+    content="{{ current_variant.price | divided_by: 100.00 }}">
+  <link
+    itemprop="availability"
+    href="http://schema.org/{% if current_variant.available %}InStock{% else %}OutOfStock{% endif %}">
 
   <form action="/cart/add" method="post" enctype="multipart/form-data">
     {% unless product.has_only_default_variant %}
@@ -27,8 +43,9 @@
         </div>
       {% endfor %}
     {% endunless %}
-    
-      <div class="form-group{% if product.options.size <= 1 %} d-none{% endif %}">
+
+      <div
+        class="form-group{% if product.options.size <= 1 %} d-none{% endif %}">
         <select name="id" class="no-js form-control" data-product-select>
           {% for variant in product.variants %}
             <option
@@ -40,13 +57,26 @@
           {% endfor %}
         </select>
       </div>
-    
+
     <div class="form-group d-none">
       <label for="Quantity">{{ 'products.product.quantity' | t }}</label>
-      <input class="form-control" type="number" id="Quantity" name="quantity" value="1" min="1">
+      <input
+        class="form-control"
+        type="number"
+        id="Quantity"
+        name="quantity"
+        value="1"
+        min="1">
     </div>
-    
-    <p class="mb-2"><img src="{{ 'icon-truck.svg' | asset_url }}" alt="Shipping icon" style="width:20px;" class="mr-2"><small>{{ section.settings.shipping }}</small></p>
+
+    <p class="mb-2">
+      <img
+        src="{{ 'icon-truck.svg' | asset_url }}"
+        alt="Shipping icon"
+        style="width:20px;"
+        class="mr-2">
+      <small>{{ section.settings.shipping }}</small>
+    </p>
     <button
       type="submit"
       class="btn btn-success btn-block"
@@ -62,5 +92,4 @@
         </span>
     </button>
   </form>
-</div> 
-      
+</div>
