--- a/src/snippets/product-note.liquid
+++ b/src/snippets/product-note.liquid
@@ -1,5 +1,13 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Note
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 <div class="row">
   <div class="col-12">
     <p class="small mb-0"><b>Note:</b> {{ product_note }}</p>
   </div>
-</div>  
+</div>
