--- a/src/snippets/product-title.liquid
+++ b/src/snippets/product-title.liquid
@@ -1,1 +1,9 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Title
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 <h1>{{ product.title }}</h1>
