--- a/src/snippets/section-product-meta.liquid
+++ b/src/snippets/section-product-meta.liquid
@@ -1,12 +1,22 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Meta
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Global Section Settings {% endcomment %}
-{% assign background_color = section.settings.background_color %}
-{% assign bg_image_url = section.settings.bg_image | img_url: '1000x' %}
+{% assign bg_color = section.settings.bg_color %}
+{% assign bg_image_url = section.settings.bg_image
+  | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg | img_url: '1000x' %}
+{% assign bg_image_url_lg = section.settings.bg_image_lg
+  | img_url: '1000x' %}
 {% if bg_image_url_lg contains 'no-image' %}
-  {% assign bg_image_url_lg = blank %} 
+  {% assign bg_image_url_lg = blank %}
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
@@ -36,8 +46,10 @@
 {% assign video_container_text_align_lg = section.settings.video_container_text_align_lg %}
 
 {% comment %} Content Container Classes {% endcomment %}
-{% assign content_classes = 'col-12' %} 
-{% assign content_classes = content_classes | append: ' ' | append: 'py-4 py-sm-0 mb-4' %}
+{% assign content_classes = 'col-12' %}
+{% assign content_classes = content_classes
+  | append: ' '
+  | append: 'py-4 py-sm-0 mb-4' %}
 
 {% comment %} Section Layout Settings {% endcomment %}
 {% assign pt = section.settings.pt %}
@@ -51,15 +63,33 @@
 
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes =  'position-relative' %}
-{% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
-{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
-{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' '
+  | append: bg_color %}
+{% assign section_classes = section_classes
+  | append: ' pt-'
+  | append: pt %}
+{% assign section_classes = section_classes
+  | append: ' pb-'
+  | append: pb %}
+{% assign section_classes = section_classes
+  | append: ' pt-md-'
+  | append: pt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' pb-md-'
+  | append: pb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mt-'
+  | append: mt %}
+{% assign section_classes = section_classes
+  | append: ' mb-'
+  | append: mb %}
+{% assign section_classes = section_classes
+  | append: ' mt-md-'
+  | append: mt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mb-md-'
+  | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -68,7 +98,8 @@
 {% assign vertically_padded_content = section.settings.vertically_padded_content %}
 {% assign container_classes = container %}
 {% if vertically_padded_content %}
-  {% assign container_classes = container_classes | append: ' py-5'%}
+  {% assign container_classes = container_classes
+    | append: ' py-5'%}
 {% endif %}
 
 {% comment %} Row Classes {% endcomment %}
@@ -77,49 +108,62 @@
 {% comment %}  {% endcomment %}
 {% assign meta_content_classes = 'col-12 col-md-10 offset-md-1 mb-3' %}
 
-<section class="{{ section_classes }}" data-section-id="{{ section.id }}">
+<section
+  class="{{ section_classes }}"
+  data-section-id="{{ section.id }}">
   {% comment %} Background Image {% endcomment %}
   {% if bg_image_url != blank %}
     <style>
-      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+      [data-section-id="{{ section.id }}"] {
+        background-image: url({{ bg_image_url }});
+        background-size: cover;
+      }
     </style>
-  {% elsif bg_image_url_lg != blank %}  
+  {% elsif bg_image_url_lg != blank %}
     <style>
-      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+      [data-section-id="{{ section.id }}"] {
+        background-image: url({{ bg_image_url_lg }});
+        background-size: cover;
+      }
     </style>
   {% endif %}
 
   {% if bg_image_url_lg != blank %}
     <style>
       @media (min-width: 992px) {
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url_lg }});
+          background-size: cover;
+        }
       }
     </style>
-  {% elsif bg_image_url != blank %}  
+  {% elsif bg_image_url != blank %}
     <style>
       @media (min-width: 992px) {
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url }});
+          background-size: cover;
+        }
       }
     </style>
-  {% endif %}    
+  {% endif %}
 
   <div class="{{ container_classes }}">
     <div class="{{ row_classes }}">
       <div class="{{ content_classes }}">
-        {% render 'content-object' 
-                  eyebrow_text: eyebrow_text, 
-                  eyebrow_style: eyebrow_style,
-                  content_color: content_color,
-                  heading_text: heading_text,
-                  heading_style: heading_style,
-                  paragraph_text: paragraph_text,
-                  col: header_container_col,
-                  col_lg: header_container_col_lg,
-                  justify_container: header_container_justify_container,
-                  justify_container_lg: header_container_justify_container_lg,
-                  text_align: header_container_text_align,
-                  text_align_lg: header_container_text_align_lg
-        %}
+        {% render 'content-object'
+          eyebrow_text: eyebrow_text,
+          eyebrow_style: eyebrow_style,
+          content_color: content_color,
+          heading_text: heading_text,
+          heading_style: heading_style,
+          paragraph_text: paragraph_text,
+          col: header_container_col,
+          col_lg: header_container_col_lg,
+          justify_container: header_container_justify_container,
+          justify_container_lg: header_container_justify_container_lg,
+          text_align: header_container_text_align,
+          text_align_lg: header_container_text_align_lg %}
       </div>
     </div>
     <div class="{{ row_classes }}">
@@ -140,7 +184,7 @@
                 <p class="card-text">{{ meta_content_secondary }}</p>
               </div>
             </div>
-          </div>            
+          </div>
           <div class="col-12 col-md-4">
             <div class="card">
               <div class="card-body">
@@ -148,9 +192,9 @@
                 <p class="card-text">{{ meta_content_tertiary }}</p>
               </div>
             </div>
-          </div>                                              
+          </div>
         </div>
       </div>
-    </div>      
+    </div>
   </div>
 </section>
