--- a/src/snippets/slideshow-pagination.liquid
+++ b/src/snippets/slideshow-pagination.liquid
@@ -1,10 +1,23 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Slideshow Pagination
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% assign content_color_value = content_color | remove: 'text-' | strip %}
 
 {% assign pagination_classes = 'slideshow-pagination' %}
 {% if content_color_value != blank %}
-  {% assign pagination_classes = pagination_classes | append: ' slideshow-pagination-' | append: content_color_value %}
+  {% assign pagination_classes = pagination_classes
+    | append: ' slideshow-pagination-'
+    | append: content_color_value %}
 {% else %}
-  {% assign pagination_classes = pagination_classes | append: ' slideshow-pagination-primary' %}
+  {% assign pagination_classes = pagination_classes
+    | append: ' slideshow-pagination-primary' %}
 {% endif %}
 
-<div class="{{ pagination_classes }}" id="slideshow-pagination-{{ slideshow_id }}"></div>
+<div
+  class="{{ pagination_classes }}"
+  id="slideshow-pagination-{{ slideshow_id }}"></div>
