--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Featured Collection Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% assign heading_text = section.settings.heading_text %}
 {% assign paragraph_text = section.settings.paragraph_text %}
 
@@ -6,12 +14,11 @@
 {% assign link_style = section.settings.link_style %}
 
 {% render 'section-featured-collection',
-            paragraph_text: paragraph_text,
-            heading_text: heading_text,
-            link_text: link_text,
-            link_url: link_url,
-            link_style: link_style
-%}
+  paragraph_text: paragraph_text,
+  heading_text: heading_text,
+  link_text: link_text,
+  link_url: link_url,
+  link_style: link_style %}
 
 {% schema %}
   {
@@ -21,7 +28,7 @@
         "type": "header",
         "content": "Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -31,18 +38,18 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },       
+      },
       {
         "type": "checkbox",
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },          
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -52,7 +59,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -63,7 +70,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -74,7 +81,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -85,7 +92,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -96,7 +103,7 @@
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -107,7 +114,7 @@
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -118,7 +125,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -129,27 +136,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -162,12 +156,12 @@
       {
         "type": "header",
         "content": "Slideshow"
-      },      
+      },
       {
-        "type": "checkbox", 
+        "type": "checkbox",
         "id": "slideshow_autoplay",
         "label": "Slideshow - autoplay",
-        "default": true 
+        "default": true
       },
       {
         "type": "select",
@@ -181,12 +175,12 @@
           { "value": "5000", "label": "5 seconds"}
         ],
         "default": "2000",
-        "info": "Default: 2 seconds"        
-      },       
-      { 
+        "info": "Default: 2 seconds"
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -242,7 +236,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -254,12 +248,12 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },              
+      },
       {
         "type": "header",
         "content": "Content"
       },
-      { 
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -279,14 +273,14 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
         "label": "Heading",
         "default": "Featured collection"
       },
-      { 
+      {
         "type": "select",
         "id": "heading_style",
         "label": "Heading Text Style",
@@ -303,12 +297,12 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },       
+        "info": "Default: Display 4"
+      },
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "select",
@@ -330,7 +324,7 @@
           { "value": "text-white-50", "label": "White 50"}
         ],
         "default": "text-body"
-      },             
+      },
       {
         "id": "collection",
         "type": "collection",
@@ -369,7 +363,7 @@
           { "value": "btn-outline-light", "label": "Light - Outline"},
           { "value": "btn-outline-dark", "label": "Dark - Outline"}
         ]
-      }     
+      }
     ],
     "presets": [
       {
