--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Header Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top ">
   <a class="navbar-brand" href="/">{{ shop.name }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -5,13 +13,13 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">    
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/collections/burgers">Burgers</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/collections/burgers/products/bacon-ultimate-cheeseburger™">Bacon Ultimate cheeseburger™</a>
-      </li>      
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/cart">Cart</a>
       </li>
