--- a/src/sections/icon-pool.liquid
+++ b/src/sections/icon-pool.liquid
@@ -1,4 +1,12 @@
-{% render 'section-icon-pool' %} 
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Icon Pool Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
+{% render 'section-icon-pool' %}
 
 {% schema %}
   {
@@ -8,7 +16,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -18,7 +26,7 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
@@ -29,7 +37,7 @@
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },      
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -39,7 +47,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -50,7 +58,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -61,7 +69,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -72,7 +80,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -83,7 +91,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -94,7 +102,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -105,7 +113,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -116,27 +124,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -149,7 +144,7 @@
       {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -205,7 +200,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -222,12 +217,12 @@
         "type": "header",
         "content": "Header"
       },
-      { 
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
       },
-      { 
+      {
         "type": "select",
         "id": "eyebrow_style",
         "label": "Eyebrow style",
@@ -242,7 +237,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -265,8 +260,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -291,12 +286,12 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "header",
         "content": "Footer"
-      },      
+      },
       {
         "type": "text",
         "id": "link_text",
@@ -333,7 +328,7 @@
         "default": "btn-outline-dark"
       }
     ],
-    "blocks": [ 
+    "blocks": [
       {
         "type": "image",
         "name": "Image",
@@ -343,10 +338,10 @@
             "type": "image_picker",
             "id": "image",
             "label": "Image"
-          }   
+          }
         ]
       }
-    ],    
+    ],
     "presets": [
       {
         "name": "Icon Pool",
@@ -354,4 +349,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
