--- a/src/sections/image-content.liquid
+++ b/src/sections/image-content.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Image Content Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Image Object Data {% endcomment %}
 {% assign image_alt_text = section.settings.image.alt %}
 {% assign image_url = section.settings.image | img_url: '800x' %}
@@ -23,32 +31,31 @@
 {% elsif image_url_lg != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
-  {% assign show_rendered_content = true %}    
+  {% assign show_rendered_content = true %}
 {% elsif link_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif link_url != blank %}
   {% assign show_rendered_content = true %}
 {% elsif link_style != blank %}
-  {% assign show_rendered_content = true %}       
+  {% assign show_rendered_content = true %}
 {% else %}
   {% assign show_rendered_content = false %}
 {% endif %}
 
 {% if show_rendered_content == true %}
   {% render 'section-image-content',
-              image_url: image_url,
-              image_url_lg: image_url_lg,
-              eyebrow_text: eyebrow_text,
-              heading_text: heading_text,
-              paragraph_text: paragraph_text,
-              link_text: link_text,
-              link_url:link_url,
-              link_style:link_style
-  %}
+    image_url: image_url,
+    image_url_lg: image_url_lg,
+    eyebrow_text: eyebrow_text,
+    heading_text: heading_text,
+    paragraph_text: paragraph_text,
+    link_text: link_text,
+    link_url:link_url,
+    link_style:link_style %}
 {% endif %}
 
 {% schema %}
@@ -58,14 +65,14 @@
       {
         "type": "header",
         "content": "Section Layout"
-      },  
+      },
       {
         "type": "checkbox",
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },             
-      { 
+      },
+      {
         "type": "select",
         "id": "content_order_lg",
         "label": "Content position",
@@ -85,7 +92,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -96,7 +103,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -107,7 +114,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -118,7 +125,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -129,7 +136,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -140,7 +147,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -151,7 +158,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -162,27 +169,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -191,12 +185,12 @@
         "type": "image_picker",
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
-      },      
-      { 
+      },
+      {
         "type": "header",
         "content": "Content Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "header_container",
         "label": "Container",
@@ -206,12 +200,12 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },      
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -267,7 +261,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -279,7 +273,7 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },       
+      },
       {
         "type": "header",
         "content": "Content"
@@ -288,7 +282,7 @@
         "type": "image_picker",
         "id": "image",
         "label": "Image - Small devices"
-      },     
+      },
       {
         "type": "image_picker",
         "id": "image_lg",
@@ -305,8 +299,8 @@
           { "value": "16by9", "label": "16x9"}
         ],
         "default": "1by1"
-      },                                 
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -326,7 +320,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -349,8 +343,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -375,7 +369,7 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "text",
@@ -420,4 +414,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
