--- a/src/sections/media-promo.liquid
+++ b/src/sections/media-promo.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Media Promo Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% render 'section-media-promo' %}
 
 {% schema %}
@@ -9,7 +17,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -19,19 +27,19 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },   
+      },
       {
         "type": "checkbox",
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },              
-      { 
+      },
+      {
         "type": "select",
         "id": "content_order_lg",
         "label": "Content position",
@@ -53,7 +61,7 @@
         ],
         "default":   "justify-content-md-center",
         "info":      "Default: Center"
-      },      
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -63,7 +71,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -74,7 +82,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -85,7 +93,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -96,7 +104,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -107,7 +115,7 @@
         "step":      1,
         "default":   3,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -118,7 +126,7 @@
         "step":      1,
         "default":   3,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -129,7 +137,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -140,27 +148,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -169,11 +164,11 @@
         "type": "image_picker",
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
-      },     
-      { 
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -229,7 +224,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -241,7 +236,7 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },        
+      },
       {
         "type": "header",
         "content": "Content"
@@ -250,7 +245,7 @@
         "type": "image_picker",
         "id": "image",
         "label": "Image - Small devices"
-      },  
+      },
       {
         "type": "image_picker",
         "id": "image_lg",
@@ -267,8 +262,8 @@
           { "value": "16by9", "label": "16x9"}
         ],
         "default": "1by1"
-      },         
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -288,7 +283,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -311,8 +306,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -337,7 +332,7 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "text",
@@ -373,9 +368,9 @@
           { "value": "btn-outline-dark", "label": "Dark - Outline"}
         ],
         "default": "btn-outline-dark"
-      } 
+      }
     ],
-    "blocks": [ 
+    "blocks": [
       {
         "type": "image",
         "name": "Image",
@@ -384,7 +379,7 @@
             "type": "image_picker",
             "id": "image",
             "label": "Image - Small devices"
-          },     
+          },
           {
             "type": "image_picker",
             "id": "image_lg",
@@ -428,8 +423,8 @@
             "default": "16by9"
           }
         ]
-      }      
-    ],        
+      }
+    ],
     "presets": [
       {
         "name": "Media Promo",
@@ -437,4 +432,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
