--- a/src/sections/product-featured-collection.liquid
+++ b/src/sections/product-featured-collection.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Featured Collection Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% assign eyebrow_text = section.settings.eyebrow_text %}
 {% assign heading_text = section.settings.heading_text %}
 {% assign paragraph_text = section.settings.paragraph_text %}
@@ -12,30 +20,29 @@
 {% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif featured_collection != blank %}
   {% assign show_rendered_content = true %}
 {% elsif link_text != blank %}
-  {% assign show_rendered_content = true %}    
+  {% assign show_rendered_content = true %}
 {% elsif link_url != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif link_url != blank %}
   {% assign show_rendered_content = true %}
 {% elsif link_style != blank %}
-  {% assign show_rendered_content = true %}      
+  {% assign show_rendered_content = true %}
 {% else %}
   {% assign show_rendered_content = false %}
 {% endif %}
 
 {% if show_rendered_content == true %}
   {% render 'section-featured-collection'
-              paragraph_text: paragraph_text,
-              heading_text: heading_text,
-              link_text: link_text,
-              link_url: link_url,
-              link_style: link_style,
-              featured_collection: featured_collection
-  %}
+    paragraph_text: paragraph_text,
+    heading_text: heading_text,
+    link_text: link_text,
+    link_url: link_url,
+    link_style: link_style,
+    featured_collection: featured_collection %}
 {% endif %}
 
 {% schema %}
@@ -46,7 +53,7 @@
         "type": "header",
         "content": "Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -56,18 +63,18 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },       
+      },
       {
         "type": "checkbox",
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },          
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -77,7 +84,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -88,7 +95,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -99,7 +106,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -110,7 +117,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -121,7 +128,7 @@
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -132,7 +139,7 @@
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -143,7 +150,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -154,27 +161,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -187,12 +181,12 @@
       {
         "type": "header",
         "content": "Slideshow"
-      },      
+      },
       {
-        "type": "checkbox", 
+        "type": "checkbox",
         "id": "slideshow_autoplay",
         "label": "Slideshow - autoplay",
-        "default": true 
+        "default": true
       },
       {
         "type": "select",
@@ -206,12 +200,12 @@
           { "value": "5000", "label": "5 seconds"}
         ],
         "default": "2000",
-        "info": "Default: 2 seconds"        
-      },       
-      { 
+        "info": "Default: 2 seconds"
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -267,7 +261,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -279,12 +273,12 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },              
+      },
       {
         "type": "header",
         "content": "Content"
       },
-      { 
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -304,14 +298,14 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
         "label": "Heading",
         "default": "Featured collection"
       },
-      { 
+      {
         "type": "select",
         "id": "heading_style",
         "label": "Heading Text Style",
@@ -328,12 +322,12 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },       
+        "info": "Default: Display 4"
+      },
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "select",
@@ -355,7 +349,7 @@
           { "value": "text-white-50", "label": "White 50"}
         ],
         "default": "text-body"
-      },             
+      },
       {
         "id": "collection",
         "type": "collection",
@@ -394,7 +388,7 @@
           { "value": "btn-outline-light", "label": "Light - Outline"},
           { "value": "btn-outline-dark", "label": "Dark - Outline"}
         ]
-      }     
+      }
     ]
   }
 
