--- a/src/sections/product-image-content.liquid
+++ b/src/sections/product-image-content.liquid
@@ -1,9 +1,18 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Image Content Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Content {% endcomment %}
 {% assign image_alt_text = section.settings.image.alt %}
 {% if product.metafields.custom_fields.s_img_content_img != blank %}
   {% assign image_url = product.metafields.custom_fields.s_img_content_img %}
 {% else %}
-  {% assign image_url = section.settings.image | img_url: '800x' %}
+  {% assign image_url = section.settings.image
+    | img_url: '800x' %}
 {% endif %}
 {% if image_url contains 'no-image' %}
   {% assign image_url = blank %}
@@ -12,7 +21,8 @@
 {% if product.metafields.custom_fields.s_img_content_img_lg != blank %}
   {% assign image_url_lg = product.metafields.custom_fields.s_img_content_img_lg %}
 {% else %}
-  {% assign image_url_lg = section.settings.image_lg | img_url: '1000x' %}
+  {% assign image_url_lg = section.settings.image_lg
+    | img_url: '1000x' %}
 {% endif %}
 {% if image_url_lg contains 'no-image' %}
   {% assign image_url_lg = blank %}
@@ -42,23 +52,22 @@
 {% elsif image_url_lg != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
-  {% assign show_rendered_content = true %} 
+  {% assign show_rendered_content = true %}
 {% else %}
   {% assign show_rendered_content = false %}
 {% endif %}
 
 {% if show_rendered_content == true %}
   {% render 'section-image-content',
-              image_url: image_url,
-              image_url_lg: image_url_lg,
-              eyebrow_text: eyebrow_text,
-              heading_text: heading_text,
-              paragraph_text: paragraph_text
-  %}
+    image_url: image_url,
+    image_url_lg: image_url_lg,
+    eyebrow_text: eyebrow_text,
+    heading_text: heading_text,
+    paragraph_text: paragraph_text %}
 {% endif %}
 
 {% schema %}
@@ -69,7 +78,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -79,19 +88,19 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },  
+      },
       {
         "type": "checkbox",
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },             
-      { 
+      },
+      {
         "type": "select",
         "id": "content_order_lg",
         "label": "Content position",
@@ -111,7 +120,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -122,7 +131,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -133,7 +142,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -144,7 +153,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -155,7 +164,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -166,7 +175,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -177,7 +186,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -188,27 +197,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -217,11 +213,11 @@
         "type": "image_picker",
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
-      },      
-      { 
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -277,7 +273,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -289,7 +285,7 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },       
+      },
       {
         "type": "header",
         "content": "Content"
@@ -298,7 +294,7 @@
         "type": "image_picker",
         "id": "image",
         "label": "Image - Small devices"
-      },     
+      },
       {
         "type": "image_picker",
         "id": "image_lg",
@@ -315,8 +311,8 @@
           { "value": "16by9", "label": "16x9"}
         ],
         "default": "1by1"
-      },                                 
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -336,7 +332,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -359,8 +355,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -385,7 +381,7 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "text",
@@ -424,4 +420,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
