--- a/src/sections/product-meta.liquid
+++ b/src/sections/product-meta.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Meta Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Content Container Settings {% endcomment %}
 {% assign eyebrow_text = section.settings.eyebrow_text %}
 {% assign heading_text = section.settings.heading_text %}
@@ -20,7 +28,7 @@
   {% assign meta_content_tertiary = product.metafields.custom_fields.meta_content_tertiary %}
 {% endif %}
 {% if product.metafields.custom_fields.meta_title_tertiary != blank %}
-  {% assign meta_title_tertiary = product.metafields.custom_fields.meta_title_tertiary %} 
+  {% assign meta_title_tertiary = product.metafields.custom_fields.meta_title_tertiary %}
 {% endif %}
 
 {% comment %} Render Section? {% endcomment %}
@@ -42,16 +50,15 @@
 
 {% if show_rendered_content == true %}
   {% render 'section-product-meta',
-              meta_title_primary: meta_title_primary,
-              meta_content_primary: meta_content_primary,
-              meta_title_secondary: meta_title_secondary,
-              meta_content_secondary: meta_content_secondary,
-              meta_title_tertiary: meta_title_tertiary,
-              meta_content_tertiary: meta_content_tertiary
-              eyebrow_text: eyebrow_text,
-              heading_text: heading_text,
-              paragraph_text: paragraph_text
-  %}
+    meta_title_primary: meta_title_primary,
+    meta_content_primary: meta_content_primary,
+    meta_title_secondary: meta_title_secondary,
+    meta_content_secondary: meta_content_secondary,
+    meta_title_tertiary: meta_title_tertiary,
+    meta_content_tertiary: meta_content_tertiary
+    eyebrow_text: eyebrow_text,
+    heading_text: heading_text,
+    paragraph_text: paragraph_text %}
 {% endif %}
 
 {% schema %}
@@ -62,7 +69,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -72,7 +79,7 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
@@ -83,7 +90,7 @@
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },   
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -93,7 +100,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -104,7 +111,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -115,7 +122,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -126,7 +133,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -137,7 +144,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -148,7 +155,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -159,7 +166,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -170,27 +177,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -199,11 +193,11 @@
         "type": "image_picker",
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
-      },   
-      { 
+      },
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -259,7 +253,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -271,12 +265,12 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },          
+      },
       {
         "type": "header",
         "content": "Content"
-      },                            
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -296,7 +290,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -319,8 +313,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -345,8 +339,8 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
