--- a/src/sections/product-text-content.liquid
+++ b/src/sections/product-text-content.liquid
@@ -1,3 +1,11 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Text Content Section
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Content Container Settings {% endcomment %}
 {% if product.metafields.custom_fields.s_text_content_eyebrow_text != blank %}
   {% assign eyebrow_text = product.metafields.custom_fields.s_text_content_eyebrow_text %}
@@ -19,7 +27,7 @@
 
 {% comment %} Render Section? {% endcomment %}
 {% if eyebrow_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
@@ -30,10 +38,9 @@
 
 {% if show_rendered_content == true %}
   {% render 'section-text-content'
-              eyebrow_text: eyebrow_text,
-              heading_text: heading_text,
-              paragraph_text: paragraph_text
-  %}
+    eyebrow_text: eyebrow_text,
+    heading_text: heading_text,
+    paragraph_text: paragraph_text %}
 {% endif %}
 
 {% schema %}
@@ -44,7 +51,7 @@
         "type": "header",
         "content": "Section Layout"
       },
-      { 
+      {
         "type": "select",
         "id": "container",
         "label": "Container",
@@ -54,7 +61,7 @@
           { "value": "container-sm", "label": "95% wide with 2.5% padding until small breakpoint"},
           { "value": "container-md", "label": "95% wide with 2.5% padding until medium breakpoint"},
           { "value": "container-lg", "label": "95% wide with 2.5% padding until large breakpoint"},
-          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},                    
+          { "value": "container-xl", "label": "95% wide with 2.5% padding until xlarge breakpoint"},
           { "value": "container-fluid", "label": "95% wide with 2.5% padding at all breakpoints"},
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
@@ -65,7 +72,7 @@
         "id": "vertically_padded_content",
         "label": "Define if content will be vertically flush or have padding (5rem)",
         "default": true
-      },        
+      },
       {
         "type":   "range",
         "label": "Padding top - small devices",
@@ -75,7 +82,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -86,7 +93,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -97,7 +104,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -108,7 +115,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes smaller than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"
       },
       {
         "type":   "range",
@@ -119,7 +126,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -130,7 +137,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -141,7 +148,7 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
       {
         "type":   "range",
@@ -152,27 +159,14 @@
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with Screen sizes larger than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"
       },
-      { 
-        "type": "select",
-        "id": "background_color",
-        "label": "Background color",
-        "options": [
-          { "value": "bg-primary", "label": "Primary" },
-          { "value": "bg-secondary", "label": "Secondary" },
-          { "value": "bg-success", "label": "Success" },
-          { "value": "bg-info", "label": "Info" },          
-          { "value": "bg-warning", "label": "Warning" },          
-          { "value": "bg-danger", "label": "Danger" },
-          { "value": "bg-light", "label": "Light" },
-          { "value": "bg-dark", "label": "Dark" },
-          { "value": "bg-white", "label": "White" }
-        ], 
-        "default": "bg-white",
-        "info": "Default: White"           
+      {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background Color"
       },
-      { 
+      {
         "type": "image_picker",
         "id": "bg_image",
         "label": "Background Image - Small Devices"
@@ -182,10 +176,10 @@
         "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
       },
-      { 
+      {
         "type": "header",
         "content": "Content Layout"
-      },   
+      },
       {
         "type": "range",
         "id": "header_container_col",
@@ -241,7 +235,7 @@
         ],
         "default":   "text-center",
         "info":      "Default: Center"
-      }, 
+      },
       {
         "type": "select",
         "id": "header_container_text_align_lg",
@@ -253,12 +247,12 @@
         ],
         "default":   "text-md-center",
         "info":      "Default: Center"
-      },            
+      },
       {
         "type": "header",
         "content": "Content"
-      },                            
-      { 
+      },
+      {
         "type": "text",
         "id": "eyebrow_text",
         "label": "Eyebrow"
@@ -278,7 +272,7 @@
           { "value": "badge-dark", "label": "Dark"}
         ],
         "default": "badge-dark"
-      }, 
+      },
       {
         "type": "text",
         "id": "heading_text",
@@ -301,8 +295,8 @@
           { "value": "h6", "label": "H6"}
         ],
         "default": "display-4",
-        "info": "Default: Display 4"             
-      },      
+        "info": "Default: Display 4"
+      },
       {
         "type": "select",
         "id": "content_color",
@@ -327,7 +321,7 @@
       {
         "type": "richtext",
         "id": "paragraph_text",
-        "label": "Paragraph"        
+        "label": "Paragraph"
       },
       {
         "type": "text",
@@ -366,4 +360,4 @@
       }
     ]
   }
-{% endschema %} 
+{% endschema %}
