--- a/src/snippets/content-object.liquid
+++ b/src/snippets/content-object.liquid
@@ -1,5 +1,5 @@
-        
-{% comment %} 
+
+{% comment %}
 
   -----------------------------------------------------------------------------
   Content Object
@@ -8,129 +8,128 @@
   Usage:
 
   {% render 'content-object',
-              id: { string } - required only if using background image
-              block_bg_image_url: { string } - optional
-              block_bg_image_url_lg: { string } - optional
-              text_align: { string } - optional
-              link_style: { string } - optional
-              link_url: { string } - optional
-              link_text: { string } - optional   
-              pt : { string } - optional
-              pr: { string } - optional
-              pb: { string } - optional
-              pl: { string } - optional
-              mt: { string } - optional
-              mr: { string } - optional
-              mb: { string } - optional
-              ml: { string } - optional
-              pt_md_up: { string } - optional
-              pr_md_up: { string } - optional
-              pb_md_up: { string } - optional
-              pl_md_up: { string } - optional
-              mt_md_up: { string } - optional
-              mr_md_up: { string } - optional
-              mb_md_up: { string } - optional
-              ml_md_up: { string } - optional
-  %}
+    id: { string } - required only if using background image
+    block_bg_image_url: { string } - optional
+    block_bg_image_url_lg: { string } - optional
+    text_align: { string } - optional
+    link_style: { string } - optional
+    link_url: { string } - optional
+    link_text: { string } - optional
+    pt : { string } - optional
+    pr: { string } - optional
+    pb: { string } - optional
+    pl: { string } - optional
+    mt: { string } - optional
+    mr: { string } - optional
+    mb: { string } - optional
+    ml: { string } - optional
+    pt_md_up: { string } - optional
+    pr_md_up: { string } - optional
+    pb_md_up: { string } - optional
+    pl_md_up: { string } - optional
+    mt_md_up: { string } - optional
+    mr_md_up: { string } - optional
+    mb_md_up: { string } - optional
+    ml_md_up: { string } - optional %}
 
 {% endcomment %}
 
 {% comment %} Defaults {% endcomment %}
 {% if pt != blank %}
-  {% assign pt = pt %} 
+  {% assign pt = pt %}
 {% else %}
-  {% assign pt = 0 %} 
+  {% assign pt = 0 %}
 {% endif %}
 
 {% if pr != blank %}
   {% assign pr = pr %}
-{% else %}  
+{% else %}
   {% assign pr = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if pb != blank %}
   {% assign pb = pb %}
-{% else %}  
+{% else %}
   {% assign pb = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if pl != blank %}
   {% assign pl = pl %}
-{% else %}  
+{% else %}
   {% assign pl = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mt != blank %}
   {% assign mt = mt %}
-{% else %}  
+{% else %}
   {% assign mt = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mr != blank %}
   {% assign mr = mr %}
-{% else %}  
+{% else %}
   {% assign mr = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mb != blank %}
   {% assign mb = mb %}
-{% else %}  
+{% else %}
   {% assign mb = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if ml != blank %}
   {% assign ml = ml %}
-{% else %}  
+{% else %}
   {% assign ml = 0 %}
-{% endif %}  
+{% endif %}
 
-{% if pt_md_up != blank %}  
+{% if pt_md_up != blank %}
   {% assign pt_md_up = pt_md_up %}
-{% else %}  
+{% else %}
   {% assign pt_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
-{% if pr_md_up != blank %}  
+{% if pr_md_up != blank %}
   {% assign pr_md_up = pr_md_up %}
-{% else %}  
+{% else %}
   {% assign pr_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if pb_md_up != blank %}
   {% assign pb_md_up = pb_md_up %}
-{% else %}  
+{% else %}
   {% assign pb_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
-{% if pl_md_up != blank %}  
+{% if pl_md_up != blank %}
   {% assign pl_md_up = pl_md_up %}
-{% else %}  
+{% else %}
   {% assign pl_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mt_md_up != blank %}
   {% assign mt_md_up = mt_md_up %}
-{% else %}  
+{% else %}
   {% assign mt_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mr_md_up != blank %}
   {% assign mr_md_up = mr_md_up %}
-{% else %}  
+{% else %}
   {% assign mr_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if mb_md_up != blank %}
   {% assign mb_md_up = mb_md_up %}
-{% else %}  
+{% else %}
   {% assign mb_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if ml_md_up != blank %}
   {% assign ml_md_up = ml_md_up %}
-{% else %}  
+{% else %}
   {% assign ml_md_up = 0 %}
-{% endif %}  
+{% endif %}
 
 {% if text_align != blank %}
   {% assign text_align = text_align %}
@@ -140,24 +139,24 @@
 
 {% if text_align_lg != blank %}
   {% assign text_align_lg = text_align_lg %}
-{% else %} 
+{% else %}
   {% assign text_align_lg = 'text-md-center' %}
 {% endif %}
 
 {% assign text_align_classes = text_align | append: ' ' | append: text_align_lg %}
- 
+
 {% comment %} Object Classes {% endcomment %}
 {% assign el_classes = 'w-100' %}
 
 {% if pt != 0 %}
-  {% assign el_classes = el_classes | append: ' pt-' | append: pt %} 
+  {% assign el_classes = el_classes | append: ' pt-' | append: pt %}
 {% endif %}
 
 {% if pr != 0 %}
   {% assign el_classes = el_classes | append: ' pr-' | append: pr %}
 {% endif %}
 
-{% if pb != 0 %}  
+{% if pb != 0 %}
   {% assign el_classes = el_classes | append: ' pb-' | append: pb %}
 {% endif %}
 
@@ -217,41 +216,39 @@
 {% if link_text != blank %}
   {% assign render_content = true %}
 {% elsif eyebrow_text != blank %}
-  {% assign render_content = true %}  
+  {% assign render_content = true %}
 {% elsif heading_text != blank %}
   {% assign render_content = true %}
 {% elsif paragraph_text != blank %}
-  {% assign render_content = true %}  
+  {% assign render_content = true %}
 {% else %}
   {% assign render_content = false %}
 {% endif %}
 
 {% if render_content == true %}
   <div {%if el_classes %}class="{{ el_classes }}"{% endif %}>
-    {% render 'eyebrow-element', 
-                text: eyebrow_text,
-                text_align: text_align_classes,
-                eyebrow_style: eyebrow_style
-    %}
+    {% render 'eyebrow-element',
+      text: eyebrow_text,
+      text_align: text_align_classes,
+      eyebrow_style: eyebrow_style %}
 
     {% render 'heading-element',
-                text: heading_text,
-                text_color: content_color,
-                text_align: text_align_classes,
-                display_size: heading_style
-    %}
+      text: heading_text,
+      text_color: content_color,
+      text_align: text_align_classes,
+      display_size: heading_style %}
 
     {% render 'paragraph-element',
-                text: paragraph_text,
-                text_color: content_color,
-                text_align: text_align_classes
-    %}
+      text: paragraph_text,
+      text_color: content_color,
+      text_align: text_align_classes %}
+
     {% render 'link-element',
-                text_align: text_align_classes,
-                link_text: link_text,
-                link_url: link_url,
-                link_style: link_style
-    %}
+      text_align: text_align_classes,
+      link_text: link_text,
+      link_url: link_url,
+      link_style: link_style %}
+
   {% if el_classes != blank %}
     </div>
   {% endif %}
