--- a/src/snippets/product-price.liquid
+++ b/src/snippets/product-price.liquid
@@ -1,13 +1,23 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Product Price
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 <div data-price-wrapper>
   <span class="h5" data-product-price>
     {{ current_variant.price | money_without_trailing_zeros }}
   </span>
 
   {% if product.compare_at_price_max > product.price %}
-    <span class="sr-only" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
+    <span
+      class="sr-only"
+      data-compare-text>{{ 'products.product.regular_price' | t }}</span>
     <s class="h5" data-compare-price>
       {% if current_variant.compare_at_price > current_variant.price %}
-        {{ current_variant.compare_at_price | money_without_trailing_zeros }}
+        {{ current_variant.compare_at_price| money_without_trailing_zeros }}
       {% endif %}
     </s>
   {% endif %}
