--- a/src/snippets/section-category-grid.liquid
+++ b/src/snippets/section-category-grid.liquid
@@ -1,19 +1,14 @@
-{% comment %} 
-  
-  -----------------------------------------------------------------------------
-  Icon Pool
-  -----------------------------------------------------------------------------  
-  
-  The featured collection section allows for a collection of products to be
-  displayed in a carousel.
+{% comment %}
 
-  Required Snippets:
+  -----------------------------------------------------------------------------
+  Category Grid
+  -----------------------------------------------------------------------------
 
 {% endcomment %}
 
 {% comment %} Global Section Settings {% endcomment %}
 {% assign section_type = 'category-grid' %}
-{% assign background_color = section.settings.background_color %}
+{% assign bg_color = section.settings.bg_color %}
 {% assign bg_image_url = section.settings.bg_image | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
@@ -36,7 +31,7 @@
 {% assign eyebrow_text = section.settings.eyebrow_text %}
 {% assign heading_style = section.settings.heading_style %}
 {% assign heading_text = section.settings.heading_text %}
-{% assign content_color = section.settings.content_color %} 
+{% assign content_color = section.settings.content_color %}
 {% assign paragraph_text = section.settings.paragraph_text %}
 {% assign link_text = section.settings.link_text %}
 {% assign link_url = section.settings.link_url %}
@@ -53,18 +48,36 @@
 {% assign mb = section.settings.mb %}
 {% assign mt_md_up = section.settings.mt_md_up %}
 {% assign mb_md_up = section.settings.mb_md_up %}
- 
+
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes =  'position-relative' %}
-{% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
-{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
-{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' '
+  | append: bg_color %}
+{% assign section_classes = section_classes
+  | append: ' pt-'
+  | append: pt %}
+{% assign section_classes = section_classes
+  | append: ' pb-'
+  | append: pb %}
+{% assign section_classes = section_classes
+  | append: ' pt-md-'
+  | append: pt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' pb-md-'
+  | append: pb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mt-'
+  | append: mt %}
+{% assign section_classes = section_classes
+  | append: ' mb-'
+  | append: mb %}
+{% assign section_classes = section_classes
+  | append: ' mt-md-'
+  | append: mt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mb-md-'
+  | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -73,7 +86,8 @@
 {% assign vertically_padded_content = section.settings.vertically_padded_content %}
 {% assign container_classes = container %}
 {% if vertically_padded_content %}
-  {% assign container_classes = container_classes | append: ' py-5'%}
+  {% assign container_classes = container_classes
+    | append: ' py-5'%}
 {% endif %}
 
 {% comment %} Slideshow Data Attributes {% endcomment %}
@@ -81,91 +95,116 @@
 {% assign slideshow_autoplay = section.settings.slideshow_autoplay %}
 {% assign slideshow_id = section.id %}
 
-{% assign slideshow_data_attrs = 'data-slideshow-autoplay="' | append: slideshow_autoplay | append: '" '%}
-{% assign slideshow_data_attrs = slideshow_data_attrs | append: 'data-slideshow-delay="' | append: slideshow_delay | append: '" '%}
-{% assign slideshow_data_attrs = slideshow_data_attrs | append: 'data-slideshow-id="' | append: slideshow_id | append: '"'%}
+{% assign slideshow_data_attrs = 'data-slideshow-autoplay="'
+  | append: slideshow_autoplay
+  | append: '" '%}
+{% assign slideshow_data_attrs = slideshow_data_attrs
+  | append: 'data-slideshow-delay="'
+  | append: slideshow_delay
+  | append: '" '%}
+{% assign slideshow_data_attrs = slideshow_data_attrs
+  | append: 'data-slideshow-id="'
+  | append: slideshow_id
+  | append: '"'%}
 
 {% comment %} Slideshow Config {% endcomment %}
 {% if featured_collection.products_count > 3 %}
-  {% assign slideshow_data_attrs = slideshow_data_attrs | prepend: 'data-slideshow ' %}   
+  {% assign slideshow_data_attrs = slideshow_data_attrs
+  | prepend: 'data-slideshow ' %}
 {% else %}
   {% assign slideshow_data_attrs = blank %}
 {% endif %}
 
-<section data-section-id="{{ section.id }}" class="{{ section_classes }}" data-section-type="{{ section_type }}">
+<section
+  data-section-id="{{ section.id }}"
+  class="{{ section_classes }}"
+  data-section-type="{{ section_type }}">
   {% comment %} Background Image {% endcomment %}
   {% if bg_image_url != blank %}
     <style>
-      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+      [data-section-id="{{ section.id }}"] {
+        background-image: url({{ bg_image_url }});
+        background-size: cover;
+      }
     </style>
-  {% elsif bg_image_url_lg != blank %}  
+  {% elsif bg_image_url_lg != blank %}
     <style>
-      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+      [data-section-id="{{ section.id }}"] {
+        background-image: url({{ bg_image_url_lg }});
+        background-size: cover;
+      }
     </style>
   {% endif %}
 
   {% if bg_image_url_lg != blank %}
     <style>
       @media (min-width: 992px) {
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url_lg }});
+          background-size: cover;
+        }
       }
     </style>
-  {% elsif bg_image_url != blank %}  
+  {% elsif bg_image_url != blank %}
     <style>
       @media (min-width: 992px) {
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url }});
+          background-size: cover;
+        }
       }
     </style>
   {% endif %}
   <div class="{{ container_classes }}">
     <div class="row mb-4">
       <div class="col-12">
-        {% render 'content-object' 
-                    eyebrow_text: eyebrow_text, 
-                    eyebrow_style: eyebrow_style,
-                    content_color: content_color,
-                    heading_text: heading_text,
-                    heading_style: heading_style,
-                    paragraph_text: paragraph_text,
-                    col: header_container_col,
-                    col_lg: header_container_col_lg,
-                    justify_container: header_container_justify_container,
-                    justify_container_lg: header_container_justify_container_lg,
-                    text_align: header_container_text_align,
-                    text_align_lg: header_container_text_align_lg
-        %}
+        {% render 'content-object'
+          eyebrow_text: eyebrow_text,
+          eyebrow_style: eyebrow_style,
+          content_color: content_color,
+          heading_text: heading_text,
+          heading_style: heading_style,
+          paragraph_text: paragraph_text,
+          col: header_container_col,
+          col_lg: header_container_col_lg,
+          justify_container: header_container_justify_container,
+          justify_container_lg: header_container_justify_container_lg,
+          text_align: header_container_text_align,
+          text_align_lg: header_container_text_align_lg %}
       </div>
-    </div> 
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="row d-flex justify-content-center">
           {% for block in section.blocks %}
-            {% assign column_background_color = block.settings.background_color %}
+            {% assign column_bg_color = block.settings.bg_color %}
             <div class="col-12 col-md-4 mb-5">
-              <div class="{{ column_background_color }}">
+              <div class="{{ column_bg_color }}">
                 {% if block.type == 'image' %}
                   {% assign title = block.settings.title %}
                   {% assign url = block.settings.url %}
-                  {% assign featured_image_src = block.settings.image.src | img_url: '600x' %}
+                  {% assign featured_image_src = block.settings.image.src 
+                    | img_url: '600x' %}
                   {% assign featured_image_alt = block.settings.image.alt %}
                   {% if url != blank %}
                     <a href="{{ url }}">
                   {% endif %}
                     {% render 'image-object',
-                                image_url: featured_image_src,
-                                image_url_lg: featured_image_src,
-                                image_alt_text: featured_image_alt,
-                                image_aspect_ratio: '16by9',
-                                image_cover_style: 'contain'
-                    %}
+                      image_url: featured_image_src,
+                      image_url_lg: featured_image_src,
+                      image_alt_text: featured_image_alt,
+                      image_aspect_ratio: '16by9',
+                      image_cover_style: 'contain' %}
                     {% if title != blank %}
                       <div class="d-flex justify-content-end">
-                        <h3 class="px-3 py-2 text-primary text-body bg-white">{{ title }}</h3>
+                        <h3
+                          class="px-3 py-2 text-primary text-body bg-white">
+                          {{ title }}</h3>
                       </div>
                     {% endif %}
                   {% if url != blank %}
                     </a>
-                  {% endif %}                
+                  {% endif %}
                 {% endif %}
               </div>
             </div>
@@ -173,5 +212,5 @@
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 </section>
