--- a/src/snippets/section-featured-collection.liquid
+++ b/src/snippets/section-featured-collection.liquid
@@ -1,25 +1,26 @@
-{% comment %} 
-  
+{% comment %}
+
   -----------------------------------------------------------------------------
   Featured Collection
-  -----------------------------------------------------------------------------  
-  
+  -----------------------------------------------------------------------------
+
   The featured collection section allows for a collection of products to be
   displayed in a carousel.
 
   Required Snippets:
   - product-card.liquid
 
-
 {% endcomment %}
 
 {% comment %} Global Section Settings {% endcomment %}
-{% assign background_color = section.settings.background_color %}
-{% assign bg_image_url = section.settings.bg_image | img_url: '1000x' %}
+{% assign bg_color = section.settings.bg_color %}
+{% assign bg_image_url = section.settings.bg_image
+  | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg | img_url: '1000x' %}
+{% assign bg_image_url_lg = section.settings.bg_image_lg
+  | img_url: '1000x' %}
 {% if bg_image_url_lg contains 'no-image' %}
   {% assign bg_image_url_lg = blank %}
 {% endif %}
@@ -35,8 +36,11 @@
 {% comment %} Section Content Settings {% endcomment %}
 {% assign eyebrow_style = section.settings.eyebrow_style %}
 {% assign heading_style = section.settings.heading_style %}
-{% assign content_color = section.settings.content_color %} 
-{% assign featured_collection_count = featured_collection.products_count | times: 1 %}
+{% assign content_color = section.settings.content_color %}
+{% assign featured_collection_count = featured_collection.products_count
+
+  | tim
+  s: 1 %}
 
 {% comment %} Section Layout Settings {% endcomment %}
 {% assign pt = section.settings.pt %}
@@ -47,18 +51,36 @@
 {% assign mb = section.settings.mb %}
 {% assign mt_md_up = section.settings.mt_md_up %}
 {% assign mb_md_up = section.settings.mb_md_up %}
- 
+
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes = 'position-relative' %}
-{% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
-{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
-{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' '
+  | append: bg_color %}
+{% assign section_classes = section_classes
+  | append: ' pt-'
+  | append: pt %}
+{% assign section_classes = section_classes
+  | append: ' pb-'
+  | append: pb %}
+{% assign section_classes = section_classes
+  | append: ' pt-md-'
+  | append: pt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' pb-md-'
+  | append: pb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mt-'
+  | append: mt %}
+{% assign section_classes = section_classes
+  | append: ' mb-'
+  | append: mb %}
+{% assign section_classes = section_classes
+  | append: ' mt-md-'
+  | append: mt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mb-md-'
+  | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -67,7 +89,8 @@
 {% assign vertically_padded_content = section.settings.vertically_padded_content %}
 {% assign container_classes = container %}
 {% if vertically_padded_content %}
-  {% assign container_classes = container_classes | append: ' py-5'%}
+  {% assign container_classes = container_classes
+    | append: ' py-5'%}
 {% endif %}
 
 {% comment %} Slideshow Data Attributes {% endcomment %}
@@ -75,59 +98,81 @@
 {% assign slideshow_autoplay = section.settings.slideshow_autoplay %}
 {% assign slideshow_id = section.id %}
 
-{% assign slideshow_data_attrs = 'data-slideshow-autoplay="' | append: slideshow_autoplay | append: '" '%}
-{% assign slideshow_data_attrs = slideshow_data_attrs | append: 'data-slideshow-delay="' | append: slideshow_delay | append: '" '%}
-{% assign slideshow_data_attrs = slideshow_data_attrs | append: 'data-slideshow-id="' | append: slideshow_id | append: '"'%}
+{% assign slideshow_data_attrs = 'data-slideshow-autoplay="'
+  | append: slideshow_autoplay | append: '" '%}
+{% assign slideshow_data_attrs = slideshow_data_attrs
+  | append: 'data-slideshow-delay="'
+  | append: slideshow_delay
+  | append: '" '%}
+{% assign slideshow_data_attrs = slideshow_data_attrs
+  | append: 'data-slideshow-id="'
+  | append: slideshow_id
+  | append: '"'%}
 
 {% comment %} Slideshow Config {% endcomment %}
 {% if featured_collection.products_count > 3 %}
-  {% assign slideshow_data_attrs = slideshow_data_attrs | prepend: 'data-slideshow ' %}   
+  {% assign slideshow_data_attrs = slideshow_data_attrs
+  | prepend: 'data-slideshow ' %}
 {% else %}
   {% assign slideshow_data_attrs = blank %}
 {% endif %}
 
-<section data-section-id="{{ section.id }}" class="{{ section_classes }}" data-section-type="featured-collection">
+<section
+  data-section-id="{{ section.id }}"
+  class="{{ section_classes }}"
+  data-section-type="featured-collection">
     {% comment %} Background Image {% endcomment %}
     {% if bg_image_url != blank %}
       <style>
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url }});
+          background-size: cover;
+        }
       </style>
-    {% elsif bg_image_url_lg != blank %}  
+    {% elsif bg_image_url_lg != blank %}
       <style>
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url_lg }});
+          background-size: cover;
+        }
       </style>
     {% endif %}
 
     {% if bg_image_url_lg != blank %}
       <style>
         @media (min-width: 992px) {
-          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+          [data-section-id="{{ section.id }}"] {
+            background-image: url({{ bg_image_url_lg }});
+            background-size: cover;
+          }
         }
       </style>
-    {% elsif bg_image_url != blank %}  
+    {% elsif bg_image_url != blank %}
       <style>
         @media (min-width: 992px) {
-          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+          [data-section-id="{{ section.id }}"] {
+            background-image: url({{ bg_image_url }});
+            background-size: cover;
+          }
         }
       </style>
-    {% endif %}  
+    {% endif %}
   <div class="{{ container_classes }}">
     <div class="row">
       <div class="col-12">
-        {% render 'content-object' 
-                    eyebrow_text: eyebrow_text, 
-                    eyebrow_style: eyebrow_style,
-                    content_color: content_color,
-                    heading_text: heading_text,
-                    heading_style: heading_style,
-                    paragraph_text: paragraph_text,
-                    col: header_container_col,
-                    col_lg: header_container_col_lg,
-                    justify_container: header_container_justify_container,
-                    justify_container_lg: header_container_justify_container_lg,
-                    text_align: header_container_text_align,
-                    text_align_lg: header_container_text_align_lg
-        %}
+        {% render 'content-object'
+          eyebrow_text: eyebrow_text,
+          eyebrow_style: eyebrow_style,
+          content_color: content_color,
+          heading_text: heading_text,
+          heading_style: heading_style,
+          paragraph_text: paragraph_text,
+          col: header_container_col,
+          col_lg: header_container_col_lg,
+          justify_container: header_container_justify_container,
+          justify_container_lg: header_container_justify_container_lg,
+          text_align: header_container_text_align,
+          text_align_lg: header_container_text_align_lg %}
         {% comment %} {% if featured_collection_count > 3 %}
           <div class="slideshow-controls">
             <div class="{% if content_order_sm_up == 'order-sm-first' %}pl-sm-5 {% else %}px-0 {% endif %}d-none d-sm-flex mt-3">
@@ -140,37 +185,41 @@
     <div class="swiper-container" {{ slideshow_data_attrs }}>
       <div class="swiper-wrapper row">
         {% for product in featured_collection.products limit: 6 %}
-          <div class="col-6 col-md-3 swiper-slide" data-slide-theme="{{ content_color }}" data-slide-index="{{ forloop.index0 }}" {{ block.shopify_attributes }}>
-            {% assign featured_image = product.featured_image.src | img_url: '600x' %}
+          <div
+            class="col-6 col-md-3 swiper-slide"
+            data-slide-theme="{{ content_color }}"
+            data-slide-index="{{ forloop.index0 }}"
+            {{ block.shopify_attributes }}>
+            {% assign featured_image = product.featured_image.src
+              | img_url: '600x' %}
             {% assign product_excerpt = product.metafields.custom_fields["excerpt"] %}
-            {% assign product_url_collection = product.url | within: featured_collection %}
+            {% assign product_url_collection = product.url
+              | within: featured_collection %}
             {% render 'product-card'
-                        featured_image: featured_image, 
-                        id: product.id,
-                        title: product.title,
-                        excerpt: product_excerpt,
-                        url: product_url_collection,
-                        compare_at_price: product.compare_at_price,
-                        price_varies: product.price_varies,
-                        price: product.price
-            %}
+              featured_image: featured_image,
+              id: product.id,
+              title: product.title,
+              excerpt: product_excerpt,
+              url: product_url_collection,
+              compare_at_price: product.compare_at_price,
+              price_varies: product.price_varies,
+              price: product.price %}
           </div>
         {% endfor %}
       </div>
     </div>
     <div class="row">
-      <div class="col-12 mb-3 d-flex d-sm-none justify-content-center">                
+      <div class="col-12 mb-3 d-flex d-sm-none justify-content-center">
         {% render 'slideshow-pagination' slideshow_id: slideshow_id %}
       </div>
     </div>
     <div class="row">
       <div class="w-100 text-center">
         {% render 'link-element',
-              link_text: link_text,
-              link_url: link_url,
-              link_style: link_style
-        %}
+          link_text: link_text,
+          link_url: link_url,
+          link_style: link_style %}
       </div>
     </div>
-  </div>  
+  </div>
 </section>
