--- a/src/snippets/section-media-promo.liquid
+++ b/src/snippets/section-media-promo.liquid
@@ -1,11 +1,21 @@
+{% comment %}
+
+  -----------------------------------------------------------------------------
+  Media Promo
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
+
 {% comment %} Global Section Settings {% endcomment %}
-{% assign background_color = section.settings.background_color %}
+{% assign bg_color = section.settings.bg_color %}
 {% assign justify_content_lg = section.settings.justify_content_lg %}
-{% assign bg_image_url = section.settings.bg_image | img_url: '1000x' %}
+{% assign bg_image_url = section.settings.bg_image
+  | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_lg = section.settings.bg_image_lg | img_url: '1000x' %}
+{% assign bg_image_url_lg = section.settings.bg_image_lg
+  | img_url: '1000x' %}
 {% if bg_image_url_lg contains 'no-image' %}
   {% assign bg_image_url_lg = blank %}
 {% endif %}
@@ -29,8 +39,10 @@
                   video_aspect_ratio: video_aspect_ratio
       %}
     {% elsif block.type == 'image' %}
-      {% assign image_url = block.settings.image.src | img_url: '600x' %}
-      {% assign image_url_lg = block.settings.image_lg.src | img_url: '800x' %}
+      {% assign image_url = block.settings.image.src
+        | img_url: '600x' %}
+      {% assign image_url_lg = block.settings.image_lg.src
+        | img_url: '800x' %}
       {% assign image_aspect_ratio = block.settings.image_aspect_ratio %}
       {% if block.settings.image_lg.alt != blank%}
         {% assign image_alt_text = block.settings.image_lg.alt %}
@@ -38,18 +50,20 @@
         {% assign image_alt_text = block.settings.image.alt %}
       {% endif %}
       {% render 'image-object',
-                  image_url: image_url,
-                  image_url_lg: image_url_lg,
-                  image_alt_text: image_alt_text
-                  image_aspect_ratio: image_aspect_ratio
-      %}    
+        image_url: image_url,
+        image_url_lg: image_url_lg,
+        image_alt_text: image_alt_text
+        image_aspect_ratio: image_aspect_ratio
+      %}
     {% endif %}
   {% endcapture %}
 {% endfor %}
 
 {% comment %} Media Container Classes {% endcomment %}
 {% assign media_classes = 'col-12 col-md-7 mb-3 mb-md-0 d-flex align-items-start flex-column' %}
-{% assign media_classes = media_classes | append: ' ' | append: justify_content_lg %}
+{% assign media_classes = media_classes
+  | append: ' '
+  | append: justify_content_lg %}
 
 {% comment %} Image Content Container Settings {% endcomment %}
 {% assign image_aspect_ratio = section.settings.image_aspect_ratio %}
@@ -80,11 +94,16 @@
 {% assign link_style = section.settings.link_style %}
 
 {% comment %} Content Container Wrapper Classes {% endcomment %}
-{% assign content_container_wrapper_classes = 'col-12 col-md-5' %} 
-{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: content_order_lg %}
-{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: 'd-flex align-items-start flex-column' %}
-{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: justify_content_lg %}
-
+{% assign content_container_wrapper_classes = 'col-12 col-md-5' %}
+{% assign content_container_wrapper_classes = content_container_wrapper_classes
+  | append: ' '
+  | append: content_order_lg %}
+{% assign content_container_wrapper_classes = content_container_wrapper_classes
+  | append: ' '
+  | append: 'd-flex align-items-start flex-column' %}
+{% assign content_container_wrapper_classes = content_container_wrapper_classes
+  | append: ' '
+  | append: justify_content_lg %}
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'pr-5 my-3' %}
@@ -101,15 +120,33 @@
 
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes =  'position-relative' %}
-{% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
-{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
-{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' '
+  | append: bg_color %}
+{% assign section_classes = section_classes
+  | append: ' pt-'
+  | append: pt %}
+{% assign section_classes = section_classes
+  | append: ' pb-'
+  | append: pb %}
+{% assign section_classes = section_classes
+  | append: ' pt-md-'
+  | append: pt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' pb-md-'
+  | append: pb_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mt-'
+  | append: mt %}
+{% assign section_classes = section_classes
+  | append: ' mb-'
+  | append: mb %}
+{% assign section_classes = section_classes
+  | append: ' mt-md-'
+  | append: mt_md_up %}
+{% assign section_classes = section_classes
+  | append: ' mb-md-'
+  | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -118,7 +155,8 @@
 {% assign vertically_padded_content = section.settings.vertically_padded_content %}
 {% assign container_classes = container %}
 {% if vertically_padded_content %}
-  {% assign container_classes = container_classes | append: ' py-5'%}
+  {% assign container_classes = container_classes
+    | append: ' py-5'%}
 {% endif %}
 
 {% comment %} Row Classes {% endcomment %}
@@ -130,78 +168,91 @@
 {% elsif image_url_lg != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
-  {% assign show_rendered_content = true %}    
+  {% assign show_rendered_content = true %}
 {% elsif link_text != blank %}
-  {% assign show_rendered_content = true %}  
+  {% assign show_rendered_content = true %}
 {% elsif link_url != blank %}
   {% assign show_rendered_content = true %}
 {% elsif link_style != blank %}
-  {% assign show_rendered_content = true %}       
+  {% assign show_rendered_content = true %}
 {% else %}
   {% assign show_rendered_content = false %}
 {% endif %}
 
 {% comment %} Render {% endcomment %}
 {% unless show_rendered_content == false %}
-  <section class="{{ section_classes }}" data-section-id="{{ section.id }}" data-section-type="image-content">
+  <section
+    class="{{ section_classes }}"
+    data-section-id="{{ section.id }}"
+    data-section-type="image-content">
     {% comment %} Background Image {% endcomment %}
     {% if bg_image_url != blank %}
       <style>
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url }});
+          background-size: cover;
+        }
       </style>
-    {% elsif bg_image_url_lg != blank %}  
+    {% elsif bg_image_url_lg != blank %}
       <style>
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] {
+          background-image: url({{ bg_image_url_lg }});
+          background-size: cover;
+        }
       </style>
     {% endif %}
 
     {% if bg_image_url_lg != blank %}
       <style>
         @media (min-width: 992px) {
-          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
+          [data-section-id="{{ section.id }}"] {
+            background-image: url({{ bg_image_url_lg }});
+            background-size: cover;
+          }
         }
       </style>
-    {% elsif bg_image_url != blank %}  
+    {% elsif bg_image_url != blank %}
       <style>
         @media (min-width: 992px) {
-          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
+          [data-section-id="{{ section.id }}"] {
+            background-image: url({{ bg_image_url }});
+            background-size: cover;
+          }
         }
       </style>
-    {% endif %}    
+    {% endif %}
 
     <div class="{{ container_classes }}">
       <div class="{{ row_classes }}">
-        <div class="{{ media_classes }}"> 
+        <div class="{{ media_classes }}">
           {{ rendered_media }}
         </div>
         <div class="{{ content_container_wrapper_classes }}">
           {% if image_url != blank or image_url_lg != blank %}
             {% render 'image-object'
-                        image_url: image_url,
-                        image_url_lg: image_url_lg,
-                        image_alt_text: image_alt_text,
-                        image_aspect_ratio: image_aspect_ratio_classes
-            %}
+              image_url: image_url,
+              image_url_lg: image_url_lg,
+              image_alt_text: image_alt_text,
+              image_aspect_ratio: image_aspect_ratio_classes %}
           {% endif %}
           <div class="{{ content_classes }}">
-            {% render 'content-object' 
-                    eyebrow_text: eyebrow_text, 
-                    eyebrow_style: eyebrow_style,
-                    content_color: content_color,
-                    heading_text: heading_text,
-                    heading_style: heading_style,
-                    paragraph_text: paragraph_text,
-                    col: header_container_col,
-                    col_lg: header_container_col_lg,
-                    justify_container: header_container_justify_container,
-                    justify_container_lg: header_container_justify_container_lg,
-                    text_align: header_container_text_align,
-                    text_align_lg: header_container_text_align_lg
-            %}
+            {% render 'content-object'
+              eyebrow_text: eyebrow_text,
+              eyebrow_style: eyebrow_style,
+              content_color: content_color,
+              heading_text: heading_text,
+              heading_style: heading_style,
+              paragraph_text: paragraph_text,
+              col: header_container_col,
+              col_lg: header_container_col_lg,
+              justify_container: header_container_justify_container,
+              justify_container_lg: header_container_justify_container_lg,
+              text_align: header_container_text_align,
+              text_align_lg: header_container_text_align_lg %}
           </div>
         </div>
       </div>
